@@ -47,7 +47,7 @@
 
 <div class="row">
   <hr />
-  <div class="col-xs-2"><p>Hadoop, 2014.</p></div>
+  <div class="col-xs-2"><p>Hadoop, 2015.</p></div>
 </div>
 </div>
 
